; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/zoran/extr_zoran_card.c_zoran_i2c_setsda.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/zoran/extr_zoran_card.c_zoran_i2c_setsda.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zoran = type { i32 }

@ZR36057_I2CBR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @zoran_i2c_setsda to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zoran_i2c_setsda(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.zoran*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.zoran*
  store %struct.zoran* %7, %struct.zoran** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load %struct.zoran*, %struct.zoran** %5, align 8
  %12 = getelementptr inbounds %struct.zoran, %struct.zoran* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, 2
  store i32 %14, i32* %12, align 4
  br label %20

15:                                               ; preds = %2
  %16 = load %struct.zoran*, %struct.zoran** %5, align 8
  %17 = getelementptr inbounds %struct.zoran, %struct.zoran* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = and i32 %18, -3
  store i32 %19, i32* %17, align 4
  br label %20

20:                                               ; preds = %15, %10
  %21 = load %struct.zoran*, %struct.zoran** %5, align 8
  %22 = getelementptr inbounds %struct.zoran, %struct.zoran* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @ZR36057_I2CBR, align 4
  %25 = call i32 @btwrite(i32 %23, i32 %24)
  ret void
}

declare dso_local i32 @btwrite(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
